make sure text wraps in search cards

--- a/Site/webapp/wdkCustomization/js/client/App/Searches/SearchCard.scss
+++ b/Site/webapp/wdkCustomization/js/client/App/Searches/SearchCard.scss
@@ -36,6 +36,7 @@
       justify-content: center;
       align-items: center;
       padding: 5px 8px;
+      word-break: break-word;
     }
     a.SearchCard-Footer {
       padding: 7px 5px;
